The education is complete.

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -8,6 +8,7 @@ $color-primary: #4d13d1;
 $color-secondary: #7855ca;
 
 $color-white: #ffffff;
+$color-black: #000;
 $color-dark: #251c3b;
 $color-light-grey: #beb9b8;
 $color-dark-grey: #6c6c6c;
@@ -26,7 +27,7 @@ $font-weight-bold: 800;
 // padding
 $section-padding: 1rem 3rem;
 $section-padding-left-right: 0rem 3rem;
-$section-padding-top-bottom: 8rem 0rem;
+$section-padding-top-bottom: 5rem 0rem;
 
 // icon
 $icon-size-arrow: 3rem;
