--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,7 @@
 @import "layout/_header.scss";
 @import "layout/_section-1.scss";
 @import "layout/_section-2.scss";
+@import "layout/_section-2-old.scss";
 @import "layout/_section-3.scss";
 @import "layout/_section-4.scss";
 @import "layout/_footer.scss";
