--- a/css/style.css
+++ b/css/style.css
@@ -180,7 +180,7 @@ header .nav__item:hover {
   border-radius: 50%;
   border: 1rem solid #ffffff;
 }
-.section-1 .img__kaka {
+.section-1 .img__avatar {
   width: 100%;
   height: auto;
   margin-top: -8%;
@@ -193,34 +193,125 @@ header .nav__item:hover {
   padding: 1rem 3rem;
 }
 .section-2 .section__container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 5rem 0rem;
+  gap: 2rem;
+}
+.section-2 .title {
+  display: flex;
+  justify-content: center;
+  font-size: 2.8rem;
+  font-weight: 800;
+}
+.section-2 .article {
+  width: 80%;
+  text-align: center;
+  line-height: 1.8;
+}
+.section-2 .cards {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 2rem;
+  padding: 2rem;
+}
+.section-2 .card {
+  position: relative;
+  min-width: 28rem;
+  height: 25rem;
+  padding: 2rem;
+  perspective: 150rem;
+  -moz-perspective: 150rem;
+}
+.section-2 .card__side {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-width: 28rem;
+  height: 25rem;
+  padding: 3rem;
+  border: 1px solid #beb9b8;
+  border-radius: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2.5rem;
+  overflow: hidden;
+  backface-visibility: hidden;
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+  transition: all 0.8s ease;
+}
+.section-2 .card__side--front {
+  background-color: #ffffff;
+}
+.section-2 .card__side--back {
+  background-color: #ffffff;
+  transform: rotateY(180deg);
+  line-height: 1.6;
+}
+.section-2 .card__side--back ol {
+  margin: 0;
+  font-size: 1.5rem;
+}
+.section-2 .card:hover .card__side--front {
+  transform: rotateY(-180deg);
+}
+.section-2 .card:hover .card__side--back {
+  transform: rotateY(0deg);
+}
+.section-2 .card__title--1 {
+  font-weight: 800;
+  color: #4d13d1;
+}
+.section-2 .card__title--2 {
+  font-size: 1.8rem;
+  font-weight: 500;
+}
+.section-2 .card__sub {
+  color: #6c6c6c;
+  line-height: 1.4;
+  font-size: 1.8rem;
+}
+
+.section-2-old {
+  display: flex;
+  justify-content: center;
+  background-color: #ffffff;
+  padding: 1rem 3rem;
+}
+.section-2-old .section__container {
   display: flex;
   flex-direction: column;
   align-items: start;
   padding: 8rem 0;
   gap: 3rem;
 }
-.section-2 .title {
+.section-2-old .title {
   font-size: 3rem;
   font-weight: 800;
   max-width: 500px;
 }
-.section-2 .cards {
+.section-2-old .cards {
   display: flex;
   justify-content: space-between;
   gap: 5rem;
 }
-.section-2 .card {
+.section-2-old .card {
   display: flex;
   flex-direction: column;
   gap: 2rem;
 }
-.section-2 .card__icon {
+.section-2-old .card__icon {
   width: 4rem;
 }
-.section-2 .card__title {
+.section-2-old .card__title {
   font-weight: 800;
 }
-.section-2 .card__sub {
+.section-2-old .card__sub {
   color: #6c6c6c;
   line-height: 1.4;
 }
@@ -275,7 +366,7 @@ header .nav__item:hover {
 }
 .section-4 .section__container {
   display: flex;
-  padding: 8rem 0rem;
+  padding: 5rem 0rem;
   gap: 3rem;
   overflow: hidden;
 }
