--- a/sass/layout/_section-2.scss
+++ b/sass/layout/_section-2.scss
@@ -34,7 +34,7 @@
     }
 
     .cards {
-        width: 100%;
+        width: 90%;
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -65,7 +65,7 @@
             min-width: 28rem;
             height: 25rem;
             padding: 3rem;
-            border: 1px solid $color-light-grey;
+            border: 0.1rem solid $color-light-grey;
             border-radius: 2rem;
 
             display: flex;
@@ -82,7 +82,8 @@
             }
 
             &--back {
-                background-color: $bg-color-secondary;
+                background-image: linear-gradient(to right bottom, $color-secondary, $color-primary);
+                color: $color-white;
                 transform: rotateY(180deg);
                 line-height: 1.6;
                 ol {
