--- a/sass/layout/_section-2.scss
+++ b/sass/layout/_section-2.scss
@@ -39,10 +39,8 @@
         justify-content: space-between;
         align-items: center;
         flex-wrap: wrap;
-        gap: 2rem;
+        gap: 3rem;
         padding: 2rem;
-        
-
     }
 
     .card {
@@ -65,7 +63,7 @@
             min-width: 28rem;
             height: 25rem;
             padding: 3rem;
-            border: 0.1rem solid $color-light-grey;
+            // border: 0.1rem solid $color-light-grey;
             border-radius: 2rem;
 
             display: flex;
